# test_release

./: README.md  main.py  pyproject.toml
.github/workflows/: release-on-pr-main.yml
