[project]
name = "test-release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.semantic_release]
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
commit_parser = "angular"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
